# AiSD

./: .gitmodules  README.md
benchmark/: README.md  benchmark.py  config.json  generate.py
graphs/: CMakeLists.txt  config.json  result.json  result.json.old
graphs/example/: main.cpp
graphs/examples/: benchmark.cpp  example.cpp
graphs/include/graphs/: DirectedAdjacencyListGraph.hpp  DirectedAdjacencyMatrixGraph.hpp  DirectedGraph.hpp  DirectedIncidenceMatrixGraph.hpp  Graph.hpp  GrowableMatrix.hpp  Matrix.hpp  UndirectedAdjacencyListGraph.hpp  UndirectedAdjacencyMatrixGraph.hpp  UndirectedGraph.hpp  UndirectedIncidenceMatrixGraph.hpp  graphs.hpp  io.hpp  random.hpp
graphs/include/graphs/AdjacencyList/: DirectedAdjacencyListGraph.hpp  UndirectedAdjacencyListGraph.hpp
graphs/include/graphs/AdjacencyMatrix/: DirectedAdjacencyMatrixGraph.hpp  UndirectedAdjacencyMatrixGraph.hpp
graphs/include/graphs/CycleFind/: CycleFind.hpp  CycleFindException.hpp  CycleNotFoundException.hpp  EulerCycleFind.hpp  EulerianCycleFind.hpp  HamiltonCycleFind.hpp  HamiltonianCycleFind.hpp
graphs/include/graphs/Generator/: BothEulerAndHamiltonGenerator.hpp  BothEulerianAndHamiltonianGenerator.hpp  DirectedGraphGenerator.hpp  Generator.hpp  GeneratorException.hpp  GeneratorSaturationOutOfRangeException.hpp  IterativeGenerator.hpp  NeitherEulerNorHamiltonGenerator.hpp  NeitherEulerianNorHamiltonianGenerator.hpp  OnlyEulerAndNotHamiltonGenerator.hpp  OnlyEulerianAndNotHamiltonianGenerator.hpp  OnlyHamiltonAndNotEulerGenerator.hpp  OnlyHamiltonianAndNotEulerianGenerator.hpp  RandomGenerator.hpp  UndirectedGraphGenerator.hpp
graphs/include/graphs/Graph/: DirectedGraph.hpp  Graph.hpp  GraphEdgeNotExistException.hpp  GraphException.hpp  GraphVertexOutOfRangeException.hpp  UndirectedGraph.hpp
graphs/include/graphs/Graph/AdjacencyList/: DirectedAdjacencyListGraph.hpp  UndirectedAdjacencyListGraph.hpp
graphs/include/graphs/Graph/AdjacencyMatrix/: DirectedAdjacencyMatrixGraph.hpp  UndirectedAdjacencyMatrixGraph.hpp
graphs/include/graphs/Graph/IncidenceMatrix/: DirectedIncidenceMatrixGraph.hpp  UndirectedIncidenceMatrixGraph.hpp
graphs/include/graphs/IncidenceMatrix/: DirectedIncidenceMatrixGraph.hpp  UndirectedIncidenceMatrixGraph.hpp
graphs/include/graphs/Matrix/: GrowableMatrix.hpp  Matrix.hpp
graphs/include/graphs/Search/: BreadthFirstSearch.hpp  DeepFirstSearch.hpp  Search.hpp
graphs/include/graphs/TopologicalSort/: BreadthFirstSort.hpp  DeepFirstSort.hpp  Sort.hpp  TopologicalBreadthFirstSort.hpp  TopologicalDeepFirstSort.hpp  TopologicalSort.hpp  TopologicalSortCycleFoundException.hpp  TopologicalSortException.hpp
graphs/include/graphs/TopologicalSorting/: BreadthFirstSorting.hpp  DeepFirstSorting.hpp  Sort.hpp
graphs/src/: main.cpp
graphs/src/graphs/: Graph.cpp  GraphException.cpp  random.cpp
graphs/src/graphs/AdjacencyList/: DirectedAdjacencyListGraph.cpp  UndirectedAdjacencyListGraph.cpp
graphs/src/graphs/AdjacencyMatrix/: DirectedAdjacencyMatrixGraph.cpp  UndirectedAdjacencyMatrixGraph.cpp
graphs/src/graphs/CycleFind/: CycleFindException.cpp  CycleNotFoundException.cpp  EulerCycleFind.cpp  EulerianCycleFind.cpp  HamiltonCycleFind.cpp  HamiltonianCycleFind.cpp
graphs/src/graphs/Generator/: GeneratorException.cpp  GeneratorSaturationOutOfRangeException.cpp
graphs/src/graphs/Graph/: Graph.cpp  GraphEdgeNotExistException.cpp  GraphException.cpp  GraphVertexOutOfRangeException.cpp
graphs/src/graphs/Graph/AdjacencyList/: DirectedAdjacencyListGraph.cpp  UndirectedAdjacencyListGraph.cpp
graphs/src/graphs/Graph/AdjacencyMatrix/: DirectedAdjacencyMatrixGraph.cpp  UndirectedAdjacencyMatrixGraph.cpp
graphs/src/graphs/Graph/IncidenceMatrix/: DirectedIncidenceMatrixGraph.cpp  UndirectedIncidenceMatrixGraph.cpp
graphs/src/graphs/IncidenceMatrix/: DirectedIncidenceMatrixGraph.cpp  UndirectedIncidenceMatrixGraph.cpp
graphs/src/graphs/Search/: BreadthFirstSearch.cpp  DeepFirstSearch.cpp
graphs/src/graphs/TopologicalSort/: BreadthFirstSort.cpp  DeepFirstSort.cpp  TopologicalBreadthFirstSort.cpp  TopologicalDeepFirstSort.cpp  TopologicalSortCycleFoundException.cpp  TopologicalSortException.cpp
graphs/src/graphs/TopologicalSorting/: BreadthFirstSorting.cpp
graphs/syf/: CMakeCache.txt  Makefile  cmake_install.cmake  dec  gen  graphs  pliczek
graphs/test/AdjacencyList/: DirectedAdjacencyListGraph.cpp  UndirectedAdjacencyListGraph.cpp
graphs/test/AdjacencyMatrix/: DirectedAdjacencyMatrixGraph.cpp  UndirectedAdjacencyMatrixGraph.cpp
graphs/test/Cycles/: EulerGraph.cpp  EulerianGraph.cpp  HamiltonianGraph.cpp
graphs/test/IncidenceMatrix/: DirectedIncidenceMatrixGraph.cpp  UndirectedIncidenceMatrixGraph.cpp
knapsack/: CMakeLists.txt  config.json  generate.py
knapsack/include/: io.hpp
knapsack/include/knapsack/: BruteForceKnapsackSolver.hpp  DynamicProgrammingKnapsackSolver.hpp  Item.hpp  KnapsackSolver.hpp  knapsack.hpp
knapsack/src/example/: benchmark.cpp  main.cpp
knapsack/src/knapsack/: BruteForceKnapsackSolver.cpp  DynamicProgrammingKnapsackSolver.cpp
knapsack/src/test/: BruteForceKnapsackSolver.cpp  DynamicProgrammingKnapsackSolver.cpp
plotter/: README.md  plotter.py
results/: result1.json  result2.json  result5.json  result6.json  result7.json
sorter/: Makefile  README.md  config.json  sorter
sorter/results/: result3.json  result4.json
sorter/src/: algorithms.hpp  io.hpp  main.cpp
sorter/src/algorithms/: bubble.hpp  counting.hpp  heap.hpp  insertion.hpp  merge.hpp  quick.hpp  selection.hpp  shell.hpp
sprawozdania/drzewa/: main.tex
sprawozdania/sortowanie/: build.sh  head.tex  sprawozdanie.md
sprawozdanie/: build.sh  sprawozdanie.md
test/: example.txt  test.sh
